pokeapi connector implementation with microprofile rest client, test created

--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,10 @@
       <version>2.23.0</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+    <groupId>io.quarkus</groupId>
+    <artifactId>quarkus-resteasy-jackson</artifactId>
+  </dependency>
   </dependencies>
   <build>
     <plugins>
