--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,2 @@
-# Configuration file
-# key = value
-
-#quarkus.index-dependency.acme.group-id=org.acme
-#quarkus.index-dependency.acme.artifact-id=shakesperean_pokedex
+org.acme.shakesperean_pokedex.service.PokeApiService/mp-rest/url=https://pokeapi.co
+org.acme.shakesperean_pokedex.service.PokeApiService/mp-rest/scope=javax.inject.Singleton
