pokeapi connector implementation with microprofile rest client, test created, improved readme

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,9 @@
+#pokeapi rest client configurations
 org.acme.shakesperean_pokedex.service.PokeApiService/mp-rest/url=https://pokeapi.co
 org.acme.shakesperean_pokedex.service.PokeApiService/mp-rest/scope=javax.inject.Singleton
+
+#open-tracing configurations
+quarkus.jaeger.service-name=shakesperean-pokedex
+quarkus.jaeger.sampler-type=const
+quarkus.jaeger.sampler-param=1
+quarkus.jaeger.reporter-log-spans=true
