defined fun translations api client and fixed test packages structure

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,10 @@
 org.acme.shakesperean_pokedex.service.PokeApiClient/mp-rest/url=https://pokeapi.co
 org.acme.shakesperean_pokedex.service.PokeApiClient/mp-rest/scope=javax.inject.Singleton
 
+#pokeapi rest client configurations
+org.acme.shakesperean_pokedex.service.FunTranslationsApiClient/mp-rest/url=https://api.funtranslations.com/translate/shakespeare.json
+org.acme.shakesperean_pokedex.service.PokeApiClient/FunTranslationsApiClient-rest/scope=javax.inject.Singleton
+
 #open-tracing configurations
 quarkus.jaeger.service-name=shakesperean-pokedex
 quarkus.jaeger.sampler-type=const
