--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,9 @@
 #pokeapi rest client configurations
-org.acme.shakesperean_pokedex.service.PokeApiClient/mp-rest/url=https://pokeapi.co
-org.acme.shakesperean_pokedex.service.PokeApiClient/mp-rest/scope=javax.inject.Singleton
-
+org.acme.shakesperean_pokedex.service.connector.PokeApiClient/mp-rest/url=https://pokeapi.co
+org.acme.shakesperean_pokedex.service.connector.PokeApiClient/mp-rest/scope=javax.inject.Singleton
 #pokeapi rest client configurations
-org.acme.shakesperean_pokedex.service.FunTranslationsApiClient/mp-rest/url=https://api.funtranslations.com/translate/shakespeare.json
-org.acme.shakesperean_pokedex.service.PokeApiClient/FunTranslationsApiClient-rest/scope=javax.inject.Singleton
-
+org.acme.shakesperean_pokedex.service.connector.FunTranslationsApiClient/mp-rest/url=https://api.funtranslations.com/translate/shakespeare.json
+org.acme.shakesperean_pokedex.service.connector.PokeApiClient/FunTranslationsApiClient-rest/scope=javax.inject.Singleton
 #open-tracing configurations
 quarkus.jaeger.service-name=shakesperean-pokedex
 quarkus.jaeger.sampler-type=const
