--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #pokeapi rest client configurations
 org.acme.shakesperean_pokedex.service.connector.PokeApiClient/mp-rest/url=https://pokeapi.co
 org.acme.shakesperean_pokedex.service.connector.PokeApiClient/mp-rest/scope=javax.inject.Singleton
-#pokeapi rest client configurations
+#funtranslations rest client configurations
 org.acme.shakesperean_pokedex.service.connector.FunTranslationsApiClient/mp-rest/url=https://api.funtranslations.com/translate/shakespeare.json
 org.acme.shakesperean_pokedex.service.connector.PokeApiClient/FunTranslationsApiClient-rest/scope=javax.inject.Singleton
 #open-tracing configurations
