--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,4 @@ quarkus.jaeger.service-name=shakesperean-pokedex
 quarkus.jaeger.sampler-type=const
 quarkus.jaeger.sampler-param=1
 quarkus.jaeger.reporter-log-spans=true
+quarkus.log.level=FINEST
