--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,5 @@ quarkus.jaeger.service-name=shakesperean-pokedex
 quarkus.jaeger.sampler-type=const
 quarkus.jaeger.sampler-param=1
 quarkus.jaeger.reporter-log-spans=true
-quarkus.log.level=FINEST
+#default loglevel
+quarkus.log.level=INFO
