--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -4,4 +4,7 @@ org.acme.shakesperean_pokedex.service.connector.PokeApiClient/mp-rest/scope=java
 #funtranslations rest client configurations
 org.acme.shakesperean_pokedex.service.connector.FunTranslationsApiClient/mp-rest/url=http://localhost:8989/translate/shakespeare.json
 org.acme.shakesperean_pokedex.service.connector.PokeApiClient/FunTranslationsApiClient-rest/scope=javax.inject.Singleton
-hello=andrea
+#open-tracing configurations
+quarkus.jaeger.enabled=false
+#default loglevel
+quarkus.log.level=WARN
