fault tolerance tests improved

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -8,3 +8,6 @@ org.acme.shakesperean_pokedex.service.connector.PokeApiClient/FunTranslationsApi
 quarkus.jaeger.enabled=false
 #default loglevel
 quarkus.log.level=WARN
+#quarkus.log.category."io.quarkus.smallrye".level=TRACE
+#quarkus.log.category."org.eclipse.microprofile.faulttolerance".level=TRACE
+#quarkus.log.category."com.netflix".level=TRACE
