--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,12 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>org.skyscreamer</groupId>
+      <artifactId>jsonassert</artifactId>
+      <version>1.5.0</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>com.github.tomakehurst</groupId>
       <artifactId>wiremock</artifactId>
       <version>2.25.1</version>
@@ -100,26 +106,28 @@
         <version>${surefire-plugin.version}</version>
         <executions>
           <execution>
-            <id>default-test</id>
-            <configuration>
-              <excludes>
-                <exclude>*/unit/**</exclude>
-                <exclude>*/integration/**</exclude>
-                <exclude>*/integration_native/**</exclude>
-              </excludes>
-            </configuration>
-          </execution>
-          <execution>
-            <id>integration-test</id>
-            <phase>test</phase>
+            <id>unit-test</id>
             <goals>
               <goal>test</goal>
             </goals>
             <configuration>
-              <excludes>
-                <exclude>*/unit/**</exclude>
-                <exclude>*/integration_native/**</exclude>
-              </excludes>
+              <skipTests>false</skipTests>
+              <includes>
+                <include>*/unit/**</include>
+              </includes>
+            </configuration>
+          </execution>
+          <execution>
+            <id>integration-test</id>
+            <phase>integration-test</phase>
+            <goals>
+              <goal>test</goal>
+            </goals>
+            <configuration>
+              <skipTests>false</skipTests>
+              <includes>
+                <include>*/integration/**</include>
+              </includes>
             </configuration>
           </execution>
         </executions>
@@ -127,6 +135,7 @@
           <systemProperties>
             <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
           </systemProperties>
+          <skipTests>true</skipTests>
         </configuration>
       </plugin>
     </plugins>
@@ -151,6 +160,9 @@
                   <goal>verify</goal>
                 </goals>
                 <configuration>
+                  <includes>
+                    <include>*/integration_native/**</include>
+                  </includes>
                   <systemProperties>
                     <native.image.path>${project.build.directory}/${project.build.finalName}-runner</native.image.path>
                   </systemProperties>
