--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@
     <quarkus.platform.group-id>io.quarkus</quarkus.platform.group-id>
     <quarkus.platform.version>1.0.1.Final</quarkus.platform.version>
     <surefire-plugin.version>2.22.1</surefire-plugin.version>
+    <skip.unit.test>false</skip.unit.test>
+    <skip.integration.test>false</skip.integration.test>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -101,7 +103,6 @@
         <version>${compiler-plugin.version}</version>
       </plugin>
       <plugin>
-<!--        todo: improve this and split unit, integration and native tests-->
         <artifactId>maven-surefire-plugin</artifactId>
         <version>${surefire-plugin.version}</version>
         <executions>
@@ -111,22 +112,9 @@
               <goal>test</goal>
             </goals>
             <configuration>
-              <skipTests>false</skipTests>
+              <skipTests>${skip.unit.test}</skipTests>
               <includes>
                 <include>*/unit/**</include>
-              </includes>
-            </configuration>
-          </execution>
-          <execution>
-            <id>integration-test</id>
-            <phase>integration-test</phase>
-            <goals>
-              <goal>test</goal>
-            </goals>
-            <configuration>
-              <skipTests>false</skipTests>
-              <includes>
-                <include>*/integration/**</include>
               </includes>
             </configuration>
           </execution>
@@ -135,8 +123,27 @@
           <systemProperties>
             <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
           </systemProperties>
+          <!-- meant to customize test phases and keep unit and integration tests isolated -->
           <skipTests>true</skipTests>
         </configuration>
+      </plugin>
+      <plugin>
+        <artifactId>maven-failsafe-plugin</artifactId>
+        <version>${surefire-plugin.version}</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>integration-test</goal>
+              <goal>verify</goal>
+            </goals>
+            <configuration>
+              <skipTests>${skip.integration.test}</skipTests>
+              <includes>
+                <include>*/integration/**</include>
+              </includes>
+            </configuration>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
@@ -160,12 +167,17 @@
                   <goal>verify</goal>
                 </goals>
                 <configuration>
+                  <excludes>
+                    <exclude>*/unit/**</exclude>
+                    <exclude>*/integration/**</exclude>
+                  </excludes>
                   <includes>
                     <include>*/integration_native/**</include>
                   </includes>
                   <systemProperties>
                     <native.image.path>${project.build.directory}/${project.build.finalName}-runner</native.image.path>
                   </systemProperties>
+                  <skipTests>false</skipTests>
                 </configuration>
               </execution>
             </executions>
