improved README.md and OpenAPI spec

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,7 @@ quarkus.jaeger.service-name=shakesperean-pokedex
 quarkus.jaeger.sampler-type=const
 quarkus.jaeger.sampler-param=1
 quarkus.jaeger.reporter-log-spans=true
+#enabled open-api on all environment
+quarkus.swagger-ui.always-include=true
 #default loglevel
 quarkus.log.level=INFO
