--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,3 +6,7 @@ jobs:
       - image: circleci/openjdk:8-jdk-stretch
     steps:
       - checkout
+      - run
+          name: Build
+          command: ./mvnw clean compile
+          
