--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,9 @@ jobs:
       - image: circleci/openjdk:8u232-jdk-stretch
     steps:
       - checkout
+      - run:
+          name: Checks
+          command: env && java -version
       - restore_cache:
           key: shakesperean-pokedex-quarkus-{{ checksum "pom.xml" }}
       - run:
