--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
       - checkout
       - run:
           name: Env check
-          command: env | grep -i java
+          command: env | grep -i java && ls $JAVA_HOME
       #      - run:
       #          name: Requirements
       #          command: export PATH=$PATH:$JAVA_HOME
