--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,8 +7,10 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Requirements
-          command: export PATH=$JAVA_HOME/bin:$PATH
+          name: JAVA_HOME configuration
+          command: |
+            echo 'export PATH=$JAVA_HOME/bin:$PATH' >> $BASH_ENV
+            source $BASH_ENV
       - run:
           name: Maven java version
           command: env | grep -i java && ./mvnw --version
