--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,15 +3,15 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: circleci/openjdk:8u232-jdk-stretch
+      - image: circleci/openjdk:11
     steps:
       - checkout
       - run:
           name: JAVA_HOME configuration
           command: |
-            echo 'export PATH=$JAVA_HOME/bin:$PATH' >> $BASH_ENV
-            source $BASH_ENV
-            ./mvnw --version
+            #            echo 'export PATH=$JAVA_HOME/bin:$PATH' >> $BASH_ENV
+            #            source $BASH_ENV
+                     ./mvnw --version
       #      - restore_cache:
       #          key: shakesperean-pokedex-quarkus-{{ checksum "pom.xml" }}
       - run:
