--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,21 +6,18 @@ jobs:
       - image: circleci/openjdk:11
     steps:
       - checkout
-      - run:
-          name: JAVA_HOME configuration
-          command: |
-            #            echo 'export PATH=$JAVA_HOME/bin:$PATH' >> $BASH_ENV
-            #            source $BASH_ENV
-                     ./mvnw --version
-      #      - restore_cache:
-      #          key: shakesperean-pokedex-quarkus-{{ checksum "pom.xml" }}
+      - restore_cache:
+          key: shakesperean-pokedex-quarkus-{{ checksum "pom.xml" }}
       - run:
           name: Build
           command: ./mvnw clean compile
-      #      - save_cache:
-      #          paths:
-      #            - ~/.m2
-      #          key: shakesperean-pokedex-quarkus-{{ checksum "pom.xml" }}
+      - save_cache:
+          paths:
+            - ~/.m2
+          key: shakesperean-pokedex-quarkus-{{ checksum "pom.xml" }}
       - run:
           name: Unit tests
           command: ./mvnw test
+      - run:
+          name: Integration tests
+          command: ./mvnw integration-test
