--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,17 +7,20 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key: shakesperean-pokedex-quarkus-{{ checksum "pom.xml" }}
+          key: shakesperean-pokedex-maven-dependencies-{{ checksum "pom.xml" }}
       - run:
           name: Build
-          command: ./mvnw clean compile
-      - save_cache:
-          paths:
-            - ~/.m2
-          key: shakesperean-pokedex-quarkus-{{ checksum "pom.xml" }}
+          command: ./mvnw compile
       - run:
           name: Unit tests
           command: ./mvnw test
       - run:
           name: Integration tests
-          command: ./mvnw integration-test
+          command: ./mvnw integration-test -Dskip.unit.test=true
+      - run:
+          name: Native image tests
+          command: ./mvnw verify -Pnative -Dskip.unit.test=true -Dskip.integration.test=true
+      - save_cache:
+          paths:
+            - ~/.m2
+          key: shakesperean-pokedex-maven-dependencies-{{ checksum "pom.xml" }}
