--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,3 +1,5 @@
+#todo: improve with docker container build/push and native image build/tests
+
 version: 2.1
 
 jobs:
@@ -17,9 +19,6 @@ jobs:
       - run:
           name: Integration tests
           command: ./mvnw integration-test -Dskip.unit.test=true
-      - run:
-          name: Native image tests
-          command: ./mvnw verify -Pnative -Dskip.unit.test=true -Dskip.integration.test=true
       - save_cache:
           paths:
             - ~/.m2
