--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,3 +23,13 @@ jobs:
           paths:
             - ~/.m2
           key: shakesperean-pokedex-maven-dependencies-{{ checksum "pom.xml" }}
+      - run:
+          name: Save test results
+          command: |
+            mkdir -p ~/test-results/junit/
+            find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/test-results/junit/ \;
+          when: always
+      - store_test_results:
+          path: ~/test-results
+      - store_artifacts:
+          path: ~/test-results/junit
