--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,35 +2,100 @@
 
 version: 2.1
 
+references:
+  default_executor: &default_executor
+    machine:
+      image: circleci/openjdk:11
+  restore_repo: &restore_repo
+    restore_cache:
+      keys:
+        - repo-{{ .Branch }}-{{ .Revision }}
+        - repo-{{ .Branch }}
+        - repo    
+
 jobs:
-  build:
-    docker:
-      - image: circleci/openjdk:11
+  checkout:
+    <<: *default_executor
     steps:
       - checkout
-      - restore_cache:
-          key: shakesperean-pokedex-maven-dependencies-{{ checksum "pom.xml" }}
-      - run:
-          name: Build
-          command: ./mvnw compile
-      - run:
-          name: Unit tests
-          command: ./mvnw test
-      - run:
-          name: Integration tests
-          command: ./mvnw integration-test -Dskip.unit.test=true
+      - save_cache:
+          key: repo-{{ .Branch }}-{{ .Revision }}
+          paths:
+            - .
+  build:
+    <<: *default_executor
+    steps:
+      - *restore_repo
+      - run: ./mvnw clean package -Dskip.unit.test=true -Dskip.integration.test=true
       - save_cache:
           paths:
             - ~/.m2
           key: shakesperean-pokedex-maven-dependencies-{{ checksum "pom.xml" }}
+  unit_tests:
+    <<: *default_executor
+    steps:
+      - *restore_repo
+      - run: ./mvnw test
       - run:
-          name: Save test results
+          name: Save unit test results
           command: |
             mkdir -p ~/test-results/junit/
             find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/test-results/junit/ \;
-            find . -type f -regex ".*/target/failsafe-reports/.*xml" ! -name '*failsafe-summary.xml' -exec cp {} ~/test-results/junit/ \;
           when: always
       - store_test_results:
           path: ~/test-results
       - store_artifacts:
-          path: ~/test-results/junit
+          path: ~/test-results/junit    
+  integration_tests:
+    <<: *default_executor
+    steps:
+      - *restore_repo
+      - run: ./mvnw integration-test -Dskip.unit.test=true 
+      - run:
+          name: Save integration test results
+          command: |
+            mkdir -p ~/test-results/junit/
+            find . -type f -regex ".*/target/failsafe-reports/.*xml" ! -name '*failsafe-summary.xml' -exec cp {} ~/test-results/junit/ \;
+          when: always 
+      - store_test_results:
+          path: ~/test-results
+      - store_artifacts:
+          path: ~/test-results/junit              
+
+  # build:
+  #   docker:
+  #     - image: circleci/openjdk:11
+  #   steps:
+  #     - checkout
+  #     - restore_cache:
+  #         key: shakesperean-pokedex-maven-dependencies-{{ checksum "pom.xml" }}
+  #     - run:
+  #         name: Build
+  #         command: ./mvnw clean package -DskipTests
+  #     - run:
+  #         name: Unit tests
+  #         command: ./mvnw test
+  #     - run:
+  #         name: Integration tests
+  #         command: ./mvnw integration-test -Dskip.unit.test=true
+  #     - save_cache:
+  #         paths:
+  #           - ~/.m2
+  #         key: shakesperean-pokedex-maven-dependencies-{{ checksum "pom.xml" }}
+  #     - run:
+  #         name: Save test results
+  #         command: |
+  #           mkdir -p ~/test-results/junit/
+  #           find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/test-results/junit/ \;
+  #           find . -type f -regex ".*/target/failsafe-reports/.*xml" ! -name '*failsafe-summary.xml' -exec cp {} ~/test-results/junit/ \;
+  #         when: always
+  #     - store_test_results:
+  #         path: ~/test-results
+  #     - store_artifacts:
+  #         path: ~/test-results/junit
+
+workflows:
+  shakesperean_pokedex:
+    jobs:
+      - checkout
+      - build          
