--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ quarkus.jaeger.reporter-log-spans=true
 quarkus.swagger-ui.always-include=true
 #default loglevel
 quarkus.log.level=INFO
+#native image max heap size
+quarkus.native.native-image-xmx=4g
