--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,7 +47,7 @@ jobs:
           name: Install Java 11
           command: |
             sudo add-apt-repository ppa:openjdk-r/ppa
-            sudo apt-get update -q \
+            sudo apt-get update -q
             sudo apt install -y openjdk-11-jdk
       - run: java -version      
       - run:
