--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,6 +53,8 @@ jobs:
             source "$HOME/.sdkman/bin/sdkman-init.sh"
             sdk install java 20.0.0.r11-grl
             sdk use java 20.0.0.r11-grl
+            java -version
+            gu
       - run: java -version
       - run: gu    
       - run:
