--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,11 @@
 
 version: 2.1
 
+parameters:
+  graalvm_sdkman_version:
+    type: string
+    default: "20.0.0.r11-grl"
+
 references:
   openjdk_executor: &openjdk_executor
     docker:
@@ -51,10 +56,13 @@ jobs:
           name: Install GraalVM
           command: |
             source "$HOME/.sdkman/bin/sdkman-init.sh"
-            sdk install java 20.0.0.r11-grl
-            sdk default java 20.0.0.r11-grl
+            sdk install java << pipeline.parameters.graalvm_sdkman_version >>
+            sdk default java << pipeline.parameters.graalvm_sdkman_version >>
             java -version
-      - run: java -version
+      - run: |
+          source "$HOME/.sdkman/bin/sdkman-init.sh"
+          java -version
+          gu
       - run: gu    
       - run:
           name: Install GraalVM Native Image Generator
