circleci: removed constraint on native build

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,7 +61,7 @@ jobs:
       - run:
           name: Install GraalVM Native Image Generator
           command: gu install native-image 
-      - run: ./mvnw clean package -Pnative -Dquarkus.native.native-image-xmx=6g
+      - run: ./mvnw clean package -Pnative
   unit_tests:
     <<: *openjdk_executor
     steps:
