--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,10 +63,12 @@ jobs:
           command: gu install native-image 
       - run: 
           name: Build native image
-          command: ./mvnw clean package -Pnative -Dskip.unit.test=true -Dskip.integration.test=true 
+          command: ./mvnw clean package -Pnative -Dskip.unit.test=true -Dskip.integration.test=true
+          no_output_timeout: 30m
       - run: 
           name: Test native image
-          command: ./mvnw verify -Pnative -Dskip.unit.test=true -Dskip.integration.test=true     
+          command: ./mvnw verify -Pnative -Dskip.unit.test=true -Dskip.integration.test=true 
+          no_output_timeout: 30m    
   unit_tests:
     <<: *openjdk_executor
     steps:
