--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,7 +42,7 @@ jobs:
           paths:
             - ~/.m2
           key: m2-{{ checksum "pom.xml" }}
-  native_build:
+  native_build_tests:
     <<: *graalvm_executor
     steps:
       - *restore_repo
@@ -62,13 +62,19 @@ jobs:
           name: Install GraalVM Native Image Generator
           command: gu install native-image 
       - run: 
-          name: Build native image
-          command: ./mvnw clean package -Pnative -Dskip.unit.test=true -Dskip.integration.test=true -Dquarkus.native.native-image-xmx=5g
-          no_output_timeout: 30m
-      - run: 
-          name: Test native image
-          command: ./mvnw verify -Pnative -Dskip.unit.test=true -Dskip.integration.test=true -Dquarkus.native.native-image-xmx=5g
-          no_output_timeout: 30m    
+          name: Build and test native image
+          command: ./mvnw clean verify -Pnative -Dskip.unit.test=true -Dskip.integration.test=true -Dquarkus.native.native-image-xmx=5g
+          no_output_timeout: 30m 
+      - run:
+          name: Save native test results
+          command: |
+            mkdir -p ~/test-results/junit/
+            find . -type f -regex ".*/target/failsafe-reports/.*xml" ! -name '*failsafe-summary.xml' -exec cp {} ~/test-results/junit/ \;
+          when: always
+      - store_test_results:
+          path: ~/test-results
+      - store_artifacts:
+          path: ~/test-results/junit    
   unit_tests:
     <<: *openjdk_executor
     steps:
@@ -117,6 +123,6 @@ workflows:
       - integration_tests:
           requires:
             - build
-      - native_build:
+      - native_build_tests:
           requires:
             - checkout             
