--- a/pom.xml
+++ b/pom.xml
@@ -78,10 +78,9 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>com.github.tomakehurst</groupId>
-      <artifactId>wiremock</artifactId>
-      <version>2.26.3</version>
-      <scope>test</scope>
+        <groupId>com.github.tomakehurst</groupId>
+        <artifactId>wiremock-jre8</artifactId>
+        <scope>test</scope>
     </dependency>
   </dependencies>
   <build>
