--- a/pom.xml
+++ b/pom.xml
@@ -158,6 +158,7 @@
               </execution>
               <execution>
                   <id>default-report</id>
+                  <phase>test</phase>
                   <goals>
                       <goal>report</goal>
                   </goals>
@@ -167,7 +168,7 @@
                         <exclude>*/integration/**</exclude>
                       </excludes>
                       <dataFile>${project.build.directory}/jacoco.exec</dataFile>
-                      <outputDirectory>${project.reporting.outputDirectory}/jacoco</outputDirectory>
+                      <outputDirectory>${project.build.directory}/coverage-reports/jacoco</outputDirectory>
                   </configuration>
               </execution>
           </executions>
