circleci: fixed codecov file path

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -90,14 +90,13 @@ jobs:
           command: |
             mkdir -p ~/test-results/junit/
             find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/test-results/junit/ \;
-            find . -type f -regex ".*/target/coverage-reports/.*xml" -exec cp {} ~/test-results/junit/ \;
           when: always
+      - codecov/upload:
+          file: .*/target/coverage-reports/jacoco.xml 
       - store_test_results:
           path: ~/test-results
       - store_artifacts:
           path: ~/test-results/junit
-      - codecov/upload:
-          file: ~/test-results/junit/jacoco.xml       
   integration_tests:
     <<: *openjdk_executor
     steps:
