--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.acme</groupId>
   <artifactId>shakespearean-pokedex</artifactId>
-  <version>1.0.2-SNAPSHOT</version>
+  <version>1.1.0-SNAPSHOT</version>
   <properties>
     <compiler-plugin.version>3.8.1</compiler-plugin.version>
     <maven.compiler.parameters>true</maven.compiler.parameters>
@@ -177,6 +177,58 @@
   </build>
   <profiles>
     <profile>
+        <id>native</id>
+        <activation>
+            <property>
+                <name>native</name>
+            </property>
+        </activation>
+        <build>
+            <plugins>
+                <plugin>
+                    <groupId>io.quarkus</groupId>
+                    <artifactId>quarkus-maven-plugin</artifactId>
+                    <version>${quarkus-plugin.version}</version>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>native-image</goal>
+                            </goals>
+                            <configuration>
+                                <enableHttpUrlHandler>true</enableHttpUrlHandler>
+                            </configuration>
+                        </execution>
+                    </executions>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-failsafe-plugin</artifactId>
+                    <version>${surefire-plugin.version}</version>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>integration-test</goal>
+                                <goal>verify</goal>
+                            </goals>
+                            <configuration>
+                              <excludes>
+                                <exclude>*/unit/**</exclude>
+                                <exclude>*/integration/**</exclude>
+                              </excludes>
+                              <includes>
+                                <include>*/integration_native/**</include>
+                              </includes>
+                              <systemProperties>
+                                <native.image.path>${project.build.directory}/${project.build.finalName}-runner</native.image.path>
+                              </systemProperties>
+                              <skipTests>false</skipTests>
+                            </configuration>
+                        </execution>
+                    </executions>
+                </plugin>
+            </plugins>
+        </build>
+    </profile>
+    <!-- <profile>
       <id>native</id>
       <activation>
         <property>
@@ -215,7 +267,7 @@
       <properties>
         <quarkus.package.type>native</quarkus.package.type>
       </properties>
-    </profile>
+    </profile> -->
   </profiles>
   <!-- todo: improve add code coverage reports  -->
 </project>
